Fixes #242 by refactoring pageHeader markup/CSS so text elements will always be visually middle-aligned

--- a/scss/modules/_pageHeader.scss
+++ b/scss/modules/_pageHeader.scss
@@ -17,31 +17,32 @@
                 margin: 1rem auto .5rem;
                 width: 75px;
             }
-
-        > h1 {
-            color: #fff;
-            font-weight: 300;
-            font-size: 2rem;
-            line-height: 1.2em;
-            margin: .5rem 0 1rem;
-            text-align: center;
-        }
-        > .breadcrumbs {
-            text-align: center;
-
-            > a {
+        > .cob-ext-wrap {
+            > h1 {
                 color: #fff;
-                display: inline-block;
-                font-family: $font-headings;
-                letter-spacing: .2em;
-                margin: 0 2em 0 0;
-                position: relative;
-                text-transform: uppercase;
-
-                &:after {
-                    content: ' >';
-                    position: absolute;
-                        right: -1.5em;
+                font-weight: 300;
+                font-size: 2rem;
+                line-height: 1.2em;
+                margin: .5rem 0 1rem;
+                text-align: center;
+            }
+            > .breadcrumbs {
+                text-align: center;
+    
+                > a {
+                    color: #fff;
+                    display: inline-block;
+                    font-family: $font-headings;
+                    letter-spacing: .2em;
+                    margin: 0 2em 0 0;
+                    position: relative;
+                    text-transform: uppercase;
+    
+                    &:after {
+                        content: ' >';
+                        position: absolute;
+                            right: -1.5em;
+                    }
                 }
             }
         }
@@ -82,31 +83,38 @@
 
     @media screen and (min-width: $screen-medium) {
         &-container {
+            min-height: 12rem;
+            padding-left: 210px;
+            position: relative;
+                z-index: 0;
 
             &:before {
-                float: left;
                 height: 152px;
                 margin: (14rem/16) (27rem/16) (14rem/16) 0;
+                    position: absolute;
+                    top: .5em;
+                    left: 2em;
+                    z-index: 1;
                 width: 152px;
             }
-            > .breadcrumbs {
-                margin: 2rem 0 0 0;
-                padding: 0 0 0 11.35rem;
-                text-align: left;
+            > .cob-ext-wrap {
+                display: table-cell;
+                height: 12rem;
+                vertical-align: middle;
 
-                > a {
+                > .breadcrumbs {
+                    margin: 0;
+                    padding: 0;
+                    text-align: left;
+    
+                    > a {
+                    }
                 }
-            }
-            > h1 {
-                font-size: (42rem/16);
-                line-height: 1.2em;
-                margin: 0;
-                text-align: left;
-
-                > span {
-                    display: inline-block;
-                    margin: 0 0 .85em 0;
-//                    max-width: 13em;
+                > h1 {
+                    font-size: (42rem/16);
+                    line-height: 1.2em;
+                    margin: 0;
+                    text-align: left;    
                 }
             }
         }
