--- a/scss/modules/_search.scss
+++ b/scss/modules/_search.scss
@@ -21,3 +21,11 @@
     }
 
 }
+.block-system {
+    > .content {
+        > .search-form {
+            @include container();
+            padding-top: 2rem;
+        }
+    }
+}
